"#2 hero added a little"

--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,9 @@
   background-color: #c2efd4;
   font-weight: bold;
 }
+
+.hero {
+  color: #224f34;
+  background-color: #c2efd4;
+  font-weight: bold;
+}
