--- a/styles.css
+++ b/styles.css
@@ -9,3 +9,10 @@
   background-color: #c2efd4;
   font-weight: bold;
 }
+.mycolor {
+  color: white;
+  background-color: #224f34;
+}
+p {
+  font-weight: normal;
+}
